# python

./: .editorconfig  .gitignore  README.md  conftest.py  pyproject.toml
.specstory/history/: 2025-10-15_09-28Z-搭建-python-monorepo-项目结构与配置.md  2025-10-15_13-14Z-重新安装依赖和运行服务的步骤.md  2025-10-15_13-37Z-扁平化-python-包目录结构讨论.md  2025-10-15_13-53Z-修改和添加依赖的步骤指导.md  2025-10-15_13-59Z-解释-bootstrap-monorepo-paths-函数的意义.md
apps/api/: pyproject.toml
apps/api/src/: main.py  run.py
apps/api/tests/: test_main.py
apps/example-service/: pyproject.toml
apps/example-service/src/example_service/: main.py  run.py
apps/example-service/tests/: test_main.py
docs/: managing-dependencies.md
scripts/: dev.py
