[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
description = "Example service that uses util"
requires-python = ">=3.9"
dependencies = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "base", "shared"]

[project.scripts]
dev-server = "run:main"

[tool.hatch.build.targets.wheel]
# Include top-level modules from src into the built wheel
force-include = { "src/run.py" = "run.py", "src/main.py" = "main.py" }
