[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "example-service"
version = "0.1.0"
description = "Example service that uses example-util"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "base-api",
    "example-util",
]

[project.scripts]
dev-server = "example_service.run:main"
